refactor: Update Gwy start date and add image guide

--- a/_layouts/gwy_layout.html
+++ b/_layouts/gwy_layout.html
@@ -214,7 +214,7 @@
 
         // --- 2. 倒计时 & 进度条 ---
         const targetDate = new Date("2026-11-29"); 
-        const startDate = new Date("2025-01-01"); // 设置为 2025-01-01 以显示当前进度
+        const startDate = new Date("2026-01-01"); // 设置为 2026-01-01
         const today = new Date();
         
         const totalTime = targetDate - startDate;
